packages/next-swc/crates/core/tests/errors/server-actions/server-graph/10/output.js
'use sevrer';
export async function foo() {}
